--- a/mysite/mysite/main.html
+++ b/mysite/mysite/main.html
@@ -19,13 +19,13 @@ font-size:25px;
 <body>
 <div class='Main'>
 <p> Select view to proceed by</p>
-<div><form action="admin.html">
+<div><form action="admin_view.html">
     <input type="submit" value="Admin" />
 </form></div>
 <div><form action="professor.html">
     <input type="submit" value="Professor" />
 </form></div>
 <div><form action="student.txt">
-    <input type="submit" value="student" />
+    <input type="submit" value="Student" />
 </form></div>
 <body>
