--- a/mysite/mysite/admin_view.html
+++ b/mysite/mysite/admin_view.html
@@ -19,7 +19,7 @@ font-size:25px;
 <body>
 <div class='Main'>
 <p> Select view to proceed by</p>
-<div><form action="administrator_f1.html">
+<div><form action="search.html">
     <input type="submit" value="List of professors sorted by input" />
 </form></div>
 <div><form action="administrator_f2.html">
